--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,7 @@
 
 
 /* Main styles */
-html { background: url("images/bg.jpg");
-     background-size: cover;
-	 background-position: top left;
-	 background-repeat: no-repeat;	 }
+html { background: #673AB7 }	 }
 body { position: relative;
       color: #212121; 
       font-family: 'Roboto Condensed', serif;
@@ -29,7 +26,7 @@ header  { width: 600px;
 		margin-bottom: .7em;
 		margin-left: auto;
 		margin-right: auto;
-	    color: #FDD900;
+	    color: #673AB7;
 		font-size: 200%;
 	    font-family: Galada, serif; }
 nav  { font-family: Raleway-SemiBold;
