--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 
 
 /* Main styles */
-html { background: #673AB7 }	 }
+html { background: #000000 }	 }
 body { position: relative;
       color: #212121; 
       font-family: 'Roboto Condensed', serif;
