--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,11 @@ header, main, footer { display: block; }
 #social a:visited { color: #212121; }
 #social a:hover { color: #212121; }
 
-/* Define classes - Can be applied multiple times */		  
+/* Define classes - Can be applied multiple times */	
+.circle { width: 300px;
+		height: 300px;
+		background: #673AB7;
+		border-radius: 150px; }
 .mobile { display: none; }
 .desktop { display: inline; }		  
 .clear { clear: both; }
