--- a/styles.css
+++ b/styles.css
@@ -5,50 +5,26 @@
 
 
 /* Main styles */
-html { background: #000000 }	 
+html { background: #FAFAFA }	 
 body { color: #212121; 
-      font-family: 'Roboto Condensed', serif;
-	  font-size: .9em;
+      font-family: 'Roboto Condensed', sans-serif;
+	  font-size: 1.1em;
 	  margin-bottom: 4em;
 	  margin-top: 0.2em; }	  
-header  { width: 600px;
-		margin-top: .7em;
-		margin-bottom: .7em;
-	    color: #673AB7;
+header  { color: #673AB7;
 		font-size: 200%;
 	    font-family: Galada, serif; }
-
-header, main, footer { display: block; }
 
 /* Define IDs - Only use once per page */
 #wrapper { width: 80%;
 		   min-width: 700px;
 		   max-width: 1024px; }
-#social { margin-left: auto;
-		  margin-right: auto;
-		  font-family: "Mono Social Icons Font";
-		  width: 100px;
-		  padding: .3em;
-		  font-size: 1.5em;
-		  text-align: center; }
-#social ul { list-style-type: none;
-		    margin: 0;
-			padding: 0;
-			display: inline; }
-#social li { display: inline; }
-#social a { text-decoration: none; }
-#social a:link { color: #212121; }
-#social a:visited { color: #212121; }
-#social a:hover { color: #212121; }
 
 /* Define classes - Can be applied multiple times */	
 .circle { width: 300px;
 		height: 300px;
 		background: #673AB7;
 		border-radius: 150px; }
-.mobile { display: none; }
-.desktop { display: inline; }		  
-.clear { clear: both; }
 .centered { text-align: center;
 			width: 50%;
 			margin-left: auto;
@@ -58,28 +34,3 @@ header, main, footer { display: block; }
 			 margin-left: auto;
 			 margin-right: auto; }
 			 
-.navfade li { background: #FDD900;
-		    display: inline-block;
-			transition: background .5s ease-in-out;
-			-moz-transition: background .5s ease-in-out;
-			-webkit-transition: background .5s ease-in-out; }
-.navfade li:hover { background: #D4B600; }
-			
-			
-			
-.formcontainer { width: 30%;
-				 min-width: 280px;
-				 margin-left: auto;
-				 margin-right: auto;
-				 text-align: center;
-				 background-color: #EEEEEE; }
-.left { float: left;
-		width: 30%;
-		text-align: left; }
-.right { float: left;
-		 width: 70%;
-		 text-align: right;
-		 padding-top: .1em }	 
-.label { padding-top: .3em;
-		 padding-bottom: .2em; }
-.input { padding: .1em; }
