--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,15 @@ header  { color: #673AB7;
 		   min-width: 700px; }
 
 /* Define classes - Can be applied multiple times */	
+.header  { color: #673AB7;
+		font-size: 200%;
+	    font-family: Galada, serif;
+		padding-top: 0px; 
+		padding-bottom: 0px; }
+.subheader  { color: #212121;
+	    font-family: Galada, serif;
+		padding-top: 0px; 
+		padding-bottom: 0px; }
 .circle { width: 300px;
 		height: 300px;
 		background: #673AB7;
