--- a/styles.css
+++ b/styles.css
@@ -28,13 +28,12 @@ header  { color: #673AB7;
 .subheader  { color: #212121;
 	    font-family: 'Roboto Condensed', sans-serif;
 		position: relative;
-		top: -20px;
-		padding-top: 0px; 
-		padding-bottom: 0px; }
-.circle { width: 300px;
-		height: 300px;
+		top: -15px;
+		left:10px; }
+.circle { width: 200px;
+		height: 200px;
 		background: #673AB7;
-		border-radius: 150px; }
+		border-radius: 100px; }
 .rect1 { width: 500px;
 		height: 50px;
 		background: #673AB7; }
