--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,8 @@ header  { color: #673AB7;
 .subheader  { color: #212121;
 	    font-family: 'Roboto Condensed', sans-serif;
 		position: relative;
-		top: -15px;
-		left:10px; }
+		top: -18px;
+		left:12px; }
 .circle { width: 200px;
 		height: 200px;
 		background: #673AB7;
@@ -37,6 +37,16 @@ header  { color: #673AB7;
 .rect1 { width: 500px;
 		height: 50px;
 		background: #673AB7; }
+.space1 { width: 500px;
+		height: 50px;
+		background: #FAFAFA; }
+.space2 { width: 500px;
+		height: 100px;
+		background: #FAFAFA; }
+.space3 { width: 500px;
+		height: 150px;
+		background: #FAFAFA; }
+
 .centered { text-align: center;
 			width: 50%;
 			margin-left: auto;
