--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,11 @@ header  { color: #673AB7;
 		position: relative;
 		top: -18px;
 		left:14px; }
-.circle { width: 200px;
+.circle { shape-outside: circle(50%);
+		width: 200px;
 		height: 200px;
 		background: #673AB7;
-		border-radius: 100px; }
+		float: left; }
 .rect1 { width: 500px;
 		height: 50px;
 		background: #673AB7; }
