--- a/styles.css
+++ b/styles.css
@@ -31,10 +31,10 @@ header  { color: #673AB7;
 		top: -18px;
 		left:14px; }
 .circle { shape-outside: circle(50%);
+		border-radius: 100px;
 		width: 200px;
 		height: 200px;
-		background: #673AB7;
-		float: left; }
+		background: #673AB7; }
 .rect1 { width: 500px;
 		height: 50px;
 		background: #673AB7; }
